--- a/Aula 62/server/package.json
+++ b/Aula 62/server/package.json
@@ -19,7 +19,8 @@
     "multer": "^1.4.3",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
